--- a/Tic Tac Toe Game/index.html
+++ b/Tic Tac Toe Game/index.html
@@ -14,6 +14,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap"
         rel="stylesheet">
+    <link rel="shortcut icon" href="Public/favicon.png" type="image/x-icon">
     <title>Tik Tak Toe</title>
 </head>
 
@@ -22,7 +23,7 @@
         <h2>Tic Tac Toe</h2>
         <div class="msgContainer">
             <div class="message message-hidden">
-                <div class="cross"><img src="cross.svg" alt=""></div>
+                <div class="cross"><img src="Public/cross.svg" alt=""></div>
                 <div class="messageText"></div>
             </div>
         </div>
